creusot/tests/should_fail/prusti/deref/project_new_ref.stderr
error[creusot]: expected `&std::boxed::Box<u32>` found `&'curr creusot_contracts::__stubs::__prusti::Zombie<std::boxed::Box<u32>>`
  --> project_new_ref.rs:15:23
   |
15 | #[ensures(result == **(old(x)).0.mk_ref())]
   |                       ^^^^^^^^^^

error: aborting due to previous error

